# medxz

./: .gitignore  Cargo.toml  biome.json  components.json  docker-compose.yml  index.html  package.json  pnpm-lock.yaml  tailwind.config.cjs  vite.config.ts
.github/workflows/: ci.yml
.husky/: pre-commit  pre-push
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs
docs/: ROADMAP.md
docs/backend/: FHIR.md  TESTING.md
server/: Cargo.toml
server/migrations/: 20260120164500_init.sql
server/src/: app.rs  auth.rs  db.rs  error.rs  lib.rs  main.rs  state.rs
server/tests/: auth.rs  healthz.rs
src/: App.css  App.tsx  bindings.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: error.rs  lib.rs  main.rs  specta_gen.rs
src-tauri/src/commands/: auth.rs  greet.rs  mod.rs
src-tauri/src/core/: error.rs  logging.rs
src/app/: App.tsx  AppShell.tsx  globals.css
src/components/form/: FormField.tsx
src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  sonner.tsx  tooltip.tsx
src/features/auth/: AuthScreen.tsx  useAuthController.ts
src/features/auth/components/: AuthHeader.tsx  LoginForm.tsx  SessionSummary.tsx
src/features/auth/lib/: formatError.ts
src/features/dashboard/: Dashboard.tsx
src/features/frontDesk/: FrontDeskDashboard.tsx  patientStore.ts  usePatients.ts
