[package]
name = "medxz-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
http = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

medxz-protocol = { path = "../crates/protocol" }

[dev-dependencies]
tower = "0.5"
