[package]
name = "medxz-server"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5"
axum = "0.7"
base64 = "0.22"
http = "1"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.7", features = ["macros", "migrate", "postgres", "runtime-tokio-rustls", "time", "uuid"] }
thiserror = "1"
time = { version = "0.3", features = ["serde", "parsing", "formatting"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
uuid = { version = "1", features = ["serde", "v7"] }

medxz-protocol = { path = "../crates/protocol" }

[dev-dependencies]
tower = "0.5"
