[package]
name = "medxz-protocol"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
time = { version = "0.3", features = ["serde", "parsing", "formatting"] }
uuid = { version = "1", features = ["serde", "v7"] }

[dev-dependencies]
proptest = "1"

